Add configuration for logging

--- a/Client/wwwroot/appsettings.Development.json
+++ b/Client/wwwroot/appsettings.Development.json
@@ -1,3 +1,10 @@
 {
-  "Message": "appsettings.Development.json"
+  "Message": "appsettings.Development.json",
+  "Logging": {
+    "LogLevel": {
+      "Default": "Debug",
+      "Microsoft": "Debug",
+      "Microsoft.Hosting.Lifetime": "Information"
+    }
+  }
 }
