Login page + forced authorization

--- a/Client/staticwebapp.config.json
+++ b/Client/staticwebapp.config.json
@@ -4,12 +4,8 @@
   },
   "routes": [
     {
-      "route": "/.auth/login/twitter",
-      "statusCode": 404
-    },
-    {
       "route": "/api/todos",
-      "methods": [ "GET" ],
+      "methods": [ "GET", "POST" ],
       "allowedRoles": [ "authenticated" ]
     }
   ]
