--- a/Client/staticwebapp.config.json
+++ b/Client/staticwebapp.config.json
@@ -4,7 +4,7 @@
   },
   "routes": [
     {
-      "route": "/api/todos/*",
+      "route": "/api/*",
       "methods": [ "GET", "POST", "PUT", "DELETE" ],
       "allowedRoles": [ "authenticated" ]
     }
