--- a/Tests/Api.Tests/Api.Tests.csproj
+++ b/Tests/Api.Tests/Api.Tests.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Bogus" Version="34.0.2" />
     <PackageReference Include="FluentAssertions" Version="6.5.1" />
     <PackageReference Include="Microsoft.Azure.Functions.Authentication.WebAssembly" Version="1.0.1-preview" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
